objects/APTS_MSPA_Opportunity_Stage__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Chevron_Value_Opportunity_Status__c</fullName>
        <label>Chevron Value - Opportunity Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <label>Opportunity Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sorting_Value_Opportunity_Status__c</fullName>
        <label>Sorting Value - Opportunity Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>APTS MSPA Opportunity Stage</label>
</CustomObject>